syntax = "proto3";
package internal;

import "settings.proto";
import "status.proto";
import "general.proto";
import "messages.proto";
import "contacts.proto";

option go_package = "/model";

message InternalContact {
    string id = 1;
    string name = 2;
}

message InternalConfig {
    string version = 1;
    string status = 2;
    repeated InternalContact contacts = 3;
    string uploadDir = 4;
    map<string,string> users = 5;
    map<string,string> inboundMedia = 6;
    whatsapp.ApplicationSettings applicationSettings = 7;
    whatsapp.ProfileAbout profileAbout = 8;
    whatsapp.BusinessProfile businessProfile = 9;
    string profilePhotoFilename = 10;
    bool verified = 11;
    bytes webhookCA = 12;
}

message WebhookRequest {
    repeated whatsapp.Contact contacts = 1;
    repeated whatsapp.Message messages = 2;
    repeated whatsapp.Status statuses = 3;
    repeated whatsapp.Error errors = 4;
    int32 errorCounter = 5;
}
